--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@ body{
   overflow:hidden;
 }
 
-/* CENTERING MOVED HERE */
 #container{
   width:100%;
   max-width:520px;
@@ -72,24 +71,14 @@ button{
 .no{
   background:#555;
   color:white;
-  transition:0.2s;
 }
 
-#mainPhoto{
+#mainPhoto,#finalPhoto{
   width:100%;
   max-height:50vh;
   object-fit:cover;
   border-radius:25px;
   margin-bottom:20px;
-  box-shadow:0 20px 50px rgba(0,0,0,0.25);
-}
-
-#finalPhoto{
-  width:100%;
-  max-height:50vh;
-  object-fit:cover;
-  border-radius:25px;
-  margin-top:20px;
   box-shadow:0 20px 50px rgba(0,0,0,0.25);
 }
 
@@ -134,7 +123,6 @@ button{
 
 <div id="container">
 
-  <!-- START SCREEN -->
   <div class="card">
     <img src="envelope.png.jpg" width="220" onclick="openLetter()" style="cursor:pointer;">
     <h1>For Alya💗💌</h1>
@@ -147,13 +135,11 @@ button{
 
 function openLetter(){
   document.getElementById("container").innerHTML = `
-    <div class="card" id="questionCard">
+    <div class="card">
       <img id="mainPhoto" src="mainphoto.jpg">
       <h1>Will you be my Valentine? 💖</h1>
-      <div>
-        <button class="yes" id="yesBtn">Yes 💕</button>
-        <button class="no" id="noBtn">No 😢</button>
-      </div>
+      <button class="yes" id="yesBtn">Yes 💕</button>
+      <button class="no" id="noBtn">No 😢</button>
     </div>
   `;
   setupButtons();
@@ -176,73 +162,111 @@ function setupButtons(){
   let scale=1;
 
   noBtn.addEventListener("click",function(){
-
     if(index < messages.length){
       noBtn.textContent = messages[index];
       index++;
     } else {
       noBtn.textContent="Still no? 😭";
     }
-
     scale+=0.35;
     yesBtn.style.transform="scale("+scale+")";
-
-    noBtn.style.position="absolute";
-    noBtn.style.left=Math.random()*70+"%";
-    noBtn.style.top=Math.random()*60+"%";
   });
 
   yesBtn.addEventListener("click",function(){
 
-    document.body.style.overflowY = "auto";
-    document.getElementById("container").style.alignItems = "flex-start";
+    document.body.style.overflowY="auto";
+    document.getElementById("container").style.alignItems="flex-start";
 
     document.getElementById("container").innerHTML=`
       <div class="card">
         <div class="love-text">Love you💕</div>
         <h1>You had no choice anw 😌💞<br><br>Guess we have plans now 😁</h1>
         <img id="finalPhoto" src="finalphoto.jpg.jpg">
-        <p style="margin-top:20px;color:white;font-weight:600;">
+        <p style="color:white;font-weight:600;">
           Scroll for something special ↓
         </p>
       </div>
-
-      <div id="letterSection" style="
-        margin-top:120px;
-        padding:100px 20px;
-        min-height:100vh;
-        background:linear-gradient(to bottom,#ffd6eb,#fff0f8);
-        border-radius:40px 40px 0 0;
-        text-align:center;
-      ">
-        <h1 style="color:#ff2e88;">A little surprise 💌</h1>
-
-        <div id="letterEnvelope" style="
-          margin:40px auto;
-          width:200px;
-          height:140px;
-          background:#ff4fa3;
-          border-radius:20px;
-          display:flex;
-          justify-content:center;
-          align-items:center;
-          font-family:'Playfair Display',serif;
-          font-size:24px;
-          color:white;
-          cursor:pointer;
-          box-shadow:0 15px 40px rgba(0,0,0,0.2);
-          transition:0.3s;
-        ">
-          Open
-        </div>
-      </div>
     `;
-
-    document.getElementById("letterEnvelope").addEventListener("click",openLoveLetter);
 
     startHearts();
     startConfetti();
+
+    let triggered=false;
+
+    window.addEventListener("scroll",function(){
+      if(triggered) return;
+      if(window.scrollY > 40){
+        triggered=true;
+        loadLetterPage();
+      }
+    });
   });
+}
+
+function loadLetterPage(){
+  document.body.style.overflow="hidden";
+  document.getElementById("container").style.alignItems="center";
+
+  document.getElementById("container").innerHTML=`
+    <div class="card">
+      <h1 style="color:#ff2e88;">A little surprise 💌</h1>
+      <div onclick="openLoveLetter()" style="
+        margin:40px auto;
+        width:200px;
+        height:140px;
+        background:#ff4fa3;
+        border-radius:20px;
+        display:flex;
+        justify-content:center;
+        align-items:center;
+        font-family:'Playfair Display',serif;
+        font-size:24px;
+        color:white;
+        cursor:pointer;
+        box-shadow:0 15px 40px rgba(0,0,0,0.2);
+      ">
+        Open
+      </div>
+    </div>
+  `;
+}
+
+function openLoveLetter(){
+  const overlay=document.createElement("div");
+  overlay.style.position="fixed";
+  overlay.style.top="0";
+  overlay.style.left="0";
+  overlay.style.width="100%";
+  overlay.style.height="100%";
+  overlay.style.background="rgba(0,0,0,0.6)";
+  overlay.style.display="flex";
+  overlay.style.justifyContent="center";
+  overlay.style.alignItems="center";
+  overlay.style.zIndex="9999";
+
+  overlay.innerHTML=`
+    <div style="
+      width:85%;
+      max-width:420px;
+      background:white;
+      padding:30px;
+      border-radius:25px;
+      box-shadow:0 25px 60px rgba(0,0,0,0.3);
+      font-family:'Playfair Display',serif;
+      color:#333;
+      position:relative;
+    ">
+      <div onclick="this.parentElement.parentElement.remove()" style="position:absolute;right:15px;top:10px;cursor:pointer;font-size:20px;">✕</div>
+      <h2 style="color:#ff2e88;text-align:center;">For You 💗</h2>
+      <p style="margin-top:20px;line-height:1.6;">
+        Dear Alya,<br><br>
+        (Write your real message here.)<br><br>
+        Love,<br>
+        Seif 💞
+      </p>
+    </div>
+  `;
+  document.body.appendChild(overlay);
 }
 
 function startHearts(){
@@ -268,49 +292,6 @@ function startConfetti(){
     document.body.appendChild(piece);
     setTimeout(()=>piece.remove(),5000);
   },150);
-}
-
-function openLoveLetter(){
-  const overlay = document.createElement("div");
-
-  overlay.style.position="fixed";
-  overlay.style.top="0";
-  overlay.style.left="0";
-  overlay.style.width="100%";
-  overlay.style.height="100%";
-  overlay.style.background="rgba(0,0,0,0.6)";
-  overlay.style.display="flex";
-  overlay.style.justifyContent="center";
-  overlay.style.alignItems="center";
-  overlay.style.zIndex="9999";
-
-  overlay.innerHTML=`
-    <div style="
-      width:85%;
-      max-width:420px;
-      background:white;
-      padding:30px;
-      border-radius:25px;
-      box-shadow:0 25px 60px rgba(0,0,0,0.3);
-      font-family:'Playfair Display',serif;
-      color:#333;
-      position:relative;
-    ">
-      <div style="position:absolute;right:15px;top:10px;cursor:pointer;font-size:20px;" onclick="this.closest('div').parentElement.remove()">✕</div>
-
-      <h2 style="color:#ff2e88;text-align:center;">For You 💗</h2>
-
-      <p style="margin-top:20px;line-height:1.6;">
-        Dear Alya,<br><br>
-        (Write your real message here. Replace this text.)<br><br>
-        I just wanted to say...<br><br>
-        Love,<br>
-        Seif 💞
-      </p>
-    </div>
-  `;
-
-  document.body.appendChild(overlay);
 }
 </script>
 
